index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');

:root {
    --text-color: #242582;
    --text-color-dark: #252424;
    --header-font: 30px;
    --text-font: 18px;
}

* {
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
    box-sizing: border-box;
}

.container {
    padding: 0 10%;
    border-bottom: 4px solid rgb(90,214,141);
}

.title {
    border-bottom: 3px solid #0000004c;
    width: fit-content;
    margin: 60px auto;
    font-size: var(--header-font);
    color: var(--text-color);
    font-weight: 400;
}

.lead {
    font-size: 18px;
    color: var(--text-color);
    font-weight: 300;
    line-height: 1.8;
}

body {
    background-color: #EDF5E1;
    position: relative;
    overflow-x: hidden;

}

nav {
    height: 100px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 10%;
    position: fixed;
    background-color: #EDF5E1;
    top: 0;
    left: 0;
    z-index: 4;
}

nav .logo {
    font-size: 35px;
    font-weight: 600;
    font-style: oblique;
    color: rgb(90,214,141);
    text-shadow: 0 0 2px var(--text-color);
    
}

.navLinks ul {
    height: 100%;
    display: flex;
    align-items: center;
    gap: 2em;
    list-style: none;
}

.navLinks ul li a {
    color: var(--text-color);
    font-size: 18px;
    text-decoration: none;
    font-weight: 400;
    position: relative;
}

.navLinks ul li a::before {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 0;
    height: 2px;
    width: 0;
    margin: 0 auto;
    background-color: var(--text-color);
    transition: width 200ms ease;
}

.navLinks ul li a:hover::before {
    width: 100%;
}

header {
    margin-top: 100px;
    padding: 0 10%;
    height: 300px;
    width: 100%;
    display: flex;
    align-items: center;
    background-image: url('/img/bg2c.jpg');
    position: relative;
}

.blur {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(5px);
    background-color: #0000003c;
    display: flex;
    align-items: center;
}

header h1 {
    width: 100%;
    text-align: center;
    font-size: 50px;
    font-weight: 300;
    color: #fff;
}

.aims {
    margin: 80px 0;
}

.assignment {
    margin: 40px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.assignmentBox {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 2em;
    align-items: center;
}

.mindMap {
    width: 60%;
    min-width: 350px;
    /* border: 2px solid #0000001f; */
    height: fit-content;
}


.mindMap h3 {
    text-align: center;
    font-size: 25px;
    font-weight: 400;
    color: var(--text-color);
    margin: 20px 0;
}

.mindMap img {
    max-width: 100%;
}

.tasks {
    width: 100%;
    gap: 2em;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.task {
    flex: 1;
    width: 100%;
    text-align: center;
    height: 480px;
    /* border: 2px solid #000; */
}

.task h3 {
    font-size: 25px;
    font-weight: 400;
    color: var(--text-color);
    margin: 20px 0;

}

.task img {
    width: 100%;
    min-width: 300px;
    margin-bottom: 40px;
}

.task a {
    border: 1px solid rgb(90,214,141);
    padding: 10px 15px;
    background: transparent;
    border-radius: 10px 5px;
    text-decoration: none;
    transition: background 200ms ease;
}

.task a:hover {
    color: var(--text-color);
    background: #0000001f;
}

.members {  
    
}


.membersBox {
    display: flex;
    align-items: center;
    gap: 2em;
    flex-wrap: wrap;
    justify-content: center;
}

.member {
    flex: 1;
    width: 100%;
    min-width: 307px;
    max-width: 258px;
    height: 420px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    /* box-shadow: 0 0 5px 2px rgba(36, 38, 130, 0.623); */
}

.member img {
    width: 100%;
    border-radius: 25px 10px;
    border: 3px solid rgb(90,214,141);
}

.desc {
    padding: 10px 0;
    width: 100%;
    text-transform: uppercase;
}

.member h3 {
    font-size: 22px;
    font-weight: 400;
    text-align: center;
}

.member p {
    font-size: 16px;
    font-weight: 300;
    text-align: center;
    color: var(--text-color);
}

.about {
    margin: 80px 0;

}

footer {
    width: 100%;
    padding: 20px 10%;
    text-align: center;
}

footer span {
    font-size: 14px;
    font-weight: 200;
    color: var(--text-color);
}

.mobileNavLinks {
    display: none;
}

.open {
    display: none;
}


@media(max-width: 700px) {

    nav {
        position: relative; 
    }

    header {
        margin-top: 0;
    }

    .navLinks {
        display: none;
    }

    .mobileNavLinks {
        display: block;
        position: absolute;
        top: 0;
        right: -150%;
        width: 200px;
        min-height: 300px;
        padding: 30px 0;
        transition: right 200ms;
        background-color: #EDF5E1;
        /* border: 2px solid #0000001f; */
    }

    .show {
        right: 0;
    }
    
    .open {
        display: block;
        cursor: pointer;
        font-size: 30px;
    }

    .close {
        width: 100%;
        display: flex;
        justify-content: flex-end;
        padding: 10px 20px;
        font-size: 30px;
        cursor: pointer;
    }

    .mobileNavLinks ul {
        display: flex;
        flex-direction: column;
        gap: 2em;
        align-items: center;
        list-style: none;
        margin-top: auto;
        padding: 0 30px;
    }

    .mobileNavLinks ul li {
        width: 100%;
    }

    .mobileNavLinks ul li a {
        text-decoration: none;
        color: var(--text-color);
    }
}

